; ModuleID = '/home/carl/AnghaBench/mpv/video/extr_hwdec.c_hwdec_devices_add.c'
source_filename = "/home/carl/AnghaBench/mpv/video/extr_hwdec.c_hwdec_devices_add.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mp_hwdec_devices = type { i32, i32, i32 }
%struct.mp_hwdec_ctx = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @hwdec_devices_add(%struct.mp_hwdec_devices* %0, %struct.mp_hwdec_ctx* %1) #0 {
  %3 = alloca %struct.mp_hwdec_devices*, align 8
  %4 = alloca %struct.mp_hwdec_ctx*, align 8
  store %struct.mp_hwdec_devices* %0, %struct.mp_hwdec_devices** %3, align 8
  store %struct.mp_hwdec_ctx* %1, %struct.mp_hwdec_ctx** %4, align 8
  %5 = load %struct.mp_hwdec_devices*, %struct.mp_hwdec_devices** %3, align 8
  %6 = getelementptr inbounds %struct.mp_hwdec_devices, %struct.mp_hwdec_devices* %5, i32 0, i32 0
  %7 = call i32 @pthread_mutex_lock(i32* %6)
  %8 = load %struct.mp_hwdec_devices*, %struct.mp_hwdec_devices** %3, align 8
  %9 = load %struct.mp_hwdec_devices*, %struct.mp_hwdec_devices** %3, align 8
  %10 = getelementptr inbounds %struct.mp_hwdec_devices, %struct.mp_hwdec_devices* %9, i32 0, i32 2
  %11 = load i32, i32* %10, align 4
  %12 = load %struct.mp_hwdec_devices*, %struct.mp_hwdec_devices** %3, align 8
  %13 = getelementptr inbounds %struct.mp_hwdec_devices, %struct.mp_hwdec_devices* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 4
  %15 = load %struct.mp_hwdec_ctx*, %struct.mp_hwdec_ctx** %4, align 8
  %16 = call i32 @MP_TARRAY_APPEND(%struct.mp_hwdec_devices* %8, i32 %11, i32 %14, %struct.mp_hwdec_ctx* %15)
  %17 = load %struct.mp_hwdec_devices*, %struct.mp_hwdec_devices** %3, align 8
  %18 = getelementptr inbounds %struct.mp_hwdec_devices, %struct.mp_hwdec_devices* %17, i32 0, i32 0
  %19 = call i32 @pthread_mutex_unlock(i32* %18)
  ret void
}

declare dso_local i32 @pthread_mutex_lock(i32*) #1

declare dso_local i32 @MP_TARRAY_APPEND(%struct.mp_hwdec_devices*, i32, i32, %struct.mp_hwdec_ctx*) #1

declare dso_local i32 @pthread_mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
